# Agentic-AI-Projects

Career_Chatbot/: README.md  app1.py
Career_Chatbot/me/: summary.txt
Sales_Agent/: README.md  Sales_Agent.ipynb
automated_stock_selector/: README.md  app.py  pyproject.toml  requirements.txt
automated_stock_selector/src/automated_stock_selector/: crew.py  main.py
automated_stock_selector/src/automated_stock_selector/config/: agents.yaml
engineering_crew/: README.md  pyproject.toml
engineering_crew/src/engineering_crew/: crew.py  main.py
engineering_crew/src/engineering_crew/config/: agents.yaml
