[project]
name = "automated_stock_selector"
version = "0.1.0"
description = "Automated_Stock_Selector using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0"
]

[project.scripts]
automated_stock_selector = "automated_stock_selector.main:run"
run_crew = "automated_stock_selector.main:run"
train = "automated_stock_selector.main:train"
replay = "automated_stock_selector.main:replay"
test = "automated_stock_selector.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
